--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <h2>Факт про сайта</h2>
 <main>
 
-<p class="tic"><a href="#"> Головна </a>
-<a class="gast" href="#">Що можна тут робити?</a></p>
+<p class="tic"><a href="https://procuksa.github.io/Chess.com_golovna/"> Головна </a>
+<a class="gast" href="https://procuksa.github.io/sho_moshna_tut_robiti_chess.com/">Що можна тут робити?</a></p>
 
 
 
